# swagger.json
@@ -336,7 +336,7 @@
         "tags": [
           "User Module"
         ],
-        "description": "Submit a user application. Access - Admin only",
+        "description": "Submit a user application. Access - User only",
         "security": [
           {
             "apiKeyAuth": []
@@ -455,9 +455,6 @@
                       "type": "string"
                     }
                   },
-                  "resume": {
-                    "type": "string"
-                  },
                   "github": {
                     "type": "string"
                   },
@@ -527,6 +524,108 @@
           },
           "404": {
             "description": "User does not exist."
+          },
+          "500": {
+            "description": "Internal Server Error."
+          }
+        }
+      }
+    },
+    "/user/resume": {
+      "post": {
+        "summary": "Submit a user's resume",
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ],
+        "tags": [
+          "Users Module"
+        ],
+        "description": "Submit a user's resume. Must have an associated profile. Access - User",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success."
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized."
+          },
+          "500": {
+            "description": "Internal Server Error."
+          }
+        }
+      }
+    },
+    "/user/confirmation": {
+      "put": {
+        "summary": "Submit a user's confirmation",
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ],
+        "tags": [
+          "Users Module"
+        ],
+        "description": "Submit a user's confirmation. Must have been accepted. Access - User",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "signatureLiability": {
+                    "type": "boolean"
+                  },
+                  "signaturePhotoRelease": {
+                    "type": "boolean"
+                  },
+                  "signatureCodeOfConduct": {
+                    "type": "boolean"
+                  },
+                  "mlhCodeOfConduct": {
+                    "type": "boolean"
+                  },
+                  "mlhEventLogistics": {
+                    "type": "boolean"
+                  },
+                  "mlhPromotional": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success."
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized."
           },
           "500": {
             "description": "Internal Server Error."
